deps/v8/test/message/fail/modules-import3.out
*%(basename)s:7: SyntaxError: The requested module 'modules-import3.js' does not provide an export named 'default'
import foo from "modules-import3.js";
       ^^^
SyntaxError: The requested module 'modules-import3.js' does not provide an export named 'default'

